FLa4a NEWS

CHANGES IN FLa4a 0.500.x:

	NEW FEATURES:
		plots for residuals, fitted and observed changed to a gray theme and visuals updated.
		plot for residuals uses latticeExtra if present to plot the names of the fleets in the left side strip.
		plot for residuals includes aggregated catch in weight. 
		fitSumm includes a flag on convergence, 0 for true and 1 for false, to be inline with optim, although 1 doesn't mean the iters were finished just that it didn't converge. Tests updated.
		a4aSCA method now has the option to center only part of the fleets using a numeric vector (subsetting by position). It tries to get around the scaling issues by giving opportunity to scale only parts of the data. Scaling indices sometimes (allways ?) makes the qs less scaled with fs. Tests updated.

	BUG FIXES:
		plot for fitted and observed includes legend to id fit and obs
		
CHANGES IN FLa4a 0.300.x:

	NEW FEATURES:
		Models can have up to 500 characters instead of the default 60. The previous limitation was creating problems, for example, when fitting models for individual ages, which were longer than 60 characters. 
	BUG FIXES:
		

CHANGES IN FLa4a 0.200.x:

	NEW FEATURES:
		added a generalized cross validation score to the fitSumm information 
		message about predictions turned off by default
	BUG FIXES:
		plot(fit, indices) legend added 

CHANGES IN FLa4a 0.150.x:

	NEW FEATURES:
		predict methods revised, not possible to predict stkpars of submodels
		tests updated
	BUG FIXES:
		predict of age specific biomass index now returns quant="all" and not the age range 
		default qmodel with sca was failing when index had less then 4 ages, now it sets ~1 if one age, ~age if 2 or 3 ages, ~s(age, k=??) for more then 3 ages
		
CHANGES IN FLa4a 0.140.x:

	NEW FEATURES:
		variance covariance matrix now comes from ADMB cov binary instead of inverting the hessian
	BUG FIXES:
		a4aInternal was accepting zero variances, now fixed 

CHANGES IN FLa4a 0.130.0:

	NEW FEATURES: