@@ -7,6 +7,7 @@ export(getADMBHessian)
 export(getADMBCovariance)
 export(getCov)
 export(is.empty)
+export(getTPL)
 #export(makePrediction)
 #export(os.32or64bit)
 #export(os.type)
@@ -35,6 +36,7 @@ exportMethods("rngmbar<-")
 exportMethods("rngyear<-")
 exportMethods("shape<-")
 exportMethods("trend<-")
+exportMethods(as.mcmc)
 exportMethods(a4aFit)
 exportMethods(a4aFitSA)
 exportMethods(a4aFitSAs)
@@ -129,3 +131,5 @@ import("triangle")
 importFrom("lattice",qqmath)
 importFrom("Matrix",bdiag,Diagonal,Matrix)
 importClassesFrom("Matrix",dsCMatrix,Matrix)
+importFrom("coda",mcmc)
+
