@@ -754,7 +754,7 @@ a4aInternal <- function(stock, indices, fmodel  = ~ s(age, k = 3) + factor(year)
 	  "\n# model params\n", ncol(Xr), 
 	  "\n# number of rows\n", nrow(Xr),
 	  "\n# design matrix\n", file = filename); write.t(Xr, file=filename)
-	   
+
 	 # set up variable names
 	pnames <- list(paste0("fMod:",colnames(Xf)),
 		paste0("qMod:", unlist(sapply(1:length(indices), function(i) paste0(fleet.names[i+1],":",colnames(Xqlist[[i]]))))),
